﻿wersja 9.5.6 - 2021-09-11
- ulepszone rozpoznawanie kanałów

wersja 9.5.5 - 2021-09-10
- naprawiono problemy z kodowaniem Python 2.7
- naprawiono przyciski sterujące

wersja 9.5.4 - 2021-09-08
- naprawiono logowanie Polsat GO Box
- ulepszone gesty dotykowe

wersja 9.5.3 - 2021-09-06
- dodany serwis Polsat GO Box
- dodano gesty dotykowe
- naprawiono usuwanie kontrolek, które powodowały awarię Kodi

wersja 9.5.2 - 2021-09-04
- poprawka paly timeshift buffer
- usunięte błędy

wersja 9.5.1 - 2021-09-03
- naprawiono znikający pasek czasu
- poprawka dla serwisu WP Pilot
- aktualizacja serwisu Telia Play

wersja 9.5.0 - 2021-09-02
- naprawiono błąd kategorii skórek

wersja 9.4.9 - 2021-09-01
- dodany serwis Polsat GO
- poprawiono wydajność działania

wersja 9.4.8 - 2021-08-22
- poprawka wideoOSD
- usunięte błędy

wersja 9.4.7 - 2021-08-16
- poprawka migotania paska czasu
- poprawka logowania w serwisie WP Pilot

wersja 9.4.6 - 2021-08-10
- poprawka logowania w serwisie WP Pilot
- dodano zapytanie do przewodnika dotyczące ustawień archiwum
- dodano poprawkę funkcji clearEpg

wersja 9.4.5 - 2021-08-03
- poprawka logowania w serwisie WP Pilot
- dodano ustawienie umożliwiające wczytywanie tylko wstępnie zdefiniowanych grup kanałów, zmniejsza czas wczytywania dużych playlist
- poprawka paska postepu czasu

wersja 9.4.4 - 2021-07-31
- poprawka paska postepu czasu
- dodany nowy serwis Telewizja Polska

wersja 9.4.3 - 2021-07-20
- zaktualizowana opcja wybierania klawiszy
- usunięte błędy

wersja 9.4.2 - 2021-07-08
- zaktualizowane menu kontekstowe i menu boczne
- zaktualizowana opcja wybierania skórek

wersja 9.4.1 - 2021-07-06
- zaktualizowano rozpoznawanie kanałów z archiwum

wersja 9.4.0 - 2021-06-27
- naprawiono migotanie paska czasu
- zaktualizowane tłumaczenia

wersja 9.3.9 - 2021-06-21
- dodano ulepszone rozpoznawanie kanałów
- aktualizacja bazy mapowej

wersja 9.3.8 - 2021-06-09
- dodana opcja wykrywania alternatywnych nazw kanałów

wersja 9.3.7 - 2021-06-04